--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,11 +11,11 @@
 		<title>Mi blog</title>
 	</head>
 	<body>
-		<header>
-			<nav>
-				<a href="/about">Sobre mi</a>
-			</nav>
-		</header>
-		<h1>Hola wawa con estils jeje</h1>
+        <header>
+            <nav>
+                <a href="/">Home</a>
+            </nav>
+        </header>
+		<h1>Hola desde about</h1>
 	</body>
 </html>
