--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,7 @@
 ---
 import '../styles/style.css'
-import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
-
-const title= "Home con js";
+import Navigation from '../components/Navigation.astro';
 ---
 
 <html lang="en">
@@ -13,11 +11,16 @@ const title= "Home con js";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="stylesheet" href="../styles/style.css">
-		<title>{title}</title>
+		<title>Blog</title>
 	</head>
 	<body>
-		<Navigation/>
-		<h1>Hola wawa con estils jeje</h1>
+        <Navigation/>
+		<h1>Hola desde el blog</h1>
+		<ul>
+			<li><a href="/posts/post-1">Post 1</a></li>
+			<li><a href="/posts/post-2">Post 2</a></li>
+			<li><a href="/posts/post-3">Post 3</a></li>
+		</ul>
 		<Footer/>
 	</body>
 </html>
