Comenzando mi pagina xd

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/style.css'
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 const pageTitle = "About Me";
 
@@ -35,7 +35,7 @@ const fontWeight ="bold";
       </style>
   </head>
   <body>
-    <Navigation></Navigation>
+    <Header/>
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
