--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,9 +1,6 @@
 ---
 ---
-<header>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>        
-    </nav>
-</header>
+
+<a href="/">Inicio</a>
+<a href="/about/">Sobre mi</a>
+<a href="/blog/">Blog</a>
