--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/style.css'
 import Footer from '../components/Footer.astro';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 ---
 
 <html lang="en">
@@ -14,7 +14,7 @@ import Navigation from '../components/Navigation.astro';
 		<title>Blog</title>
 	</head>
 	<body>
-        <Navigation/>
+        <Header>
 		<h1>Hola desde el blog</h1>
 		<ul>
 			<li><a href="/posts/post-1">Post 1</a></li>
