--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import '../styles/style.css'
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
-const title= "Home con js";
 ---
 
 <html lang="en">
@@ -13,11 +12,15 @@ const title= "Home con js";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="stylesheet" href="../styles/style.css">
-		<title>{title}</title>
+		<title>Trismegistodiego</title>
 	</head>
 	<body>
-		<Navigation/>
+		<Header/>
 		<h1>Hola wawa con estils jeje</h1>
 		<Footer/>
+		<script>
+		import "../scripts/menu.js";
+		</script>
+		<h1>Hola</h1>
 	</body>
 </html>
