--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Footer from '../components/Footer.astro';
 	</head>
 	<body>
 		<Header/>
-		<h1>Hola wawa con estils jeje</h1>
+		<h1>TRABAJANDO PARA USTED</h1>
 		<Footer/>
 		<script>
 		import "../scripts/menu.js";
