--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -360,4 +360,14 @@ body{
   color: #22223B;
 }
 
+.nav-links{
+  padding: 2em;
+  background-color: #22223B;
+  display: flex;
+  justify-content: space-around;
+}
+.nav-links a{
+  color: white;
+
+}
 
